--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -5,7 +5,7 @@ map $original_uri $api_uri {
 
 server {
          listen       80;
-         server_name  opnform;
+         server_name  opnform.keyspace.dev;
          root         /app/public;
 
          access_log /dev/stdout;
@@ -37,5 +37,28 @@ server {
             fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html/public/index.php;
             fastcgi_param REQUEST_URI $api_uri;
          }
+
+         location /.well-known/acme-challenge/ {
+            root /var/www/certbot;  # This is the location for challenge files
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
 }
 
+server {
+    listen 443 ssl;
+    server_name opnform.keyspace.dev;  # Replace with your domain
+
+    ssl_certificate /etc/letsencrypt/live/opnform.keyspace.dev/fullchain.pem;  # Replace with your domain
+    ssl_certificate_key /etc/letsencrypt/live/opnform.keyspace.dev/privkey.pem;  # Replace with your domain
+
+    location / {
+        proxy_pass http://api:your_api_port;  # Adjust the port as necessary
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
